// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserNotifications should render correctly when 0 notif 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c1 {
  background: #edebeb;
  border-radius: 12px;
  padding: 40px;
  margin-top: 26px;
  margin-right: 120px;
  margin-left: 120px;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
}

.c3 {
  font-weight: bold;
  font-size: 28px;
  line-height: 35px;
  margin-bottom: 8px;
}

.c2 {
  color: #5e5e5e;
  margin-top: 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
  style={
    Object {
      "display": "flex",
      "flex": 1,
      "flexDirection": "column",
    }
  }
>
  <div
    className="c0"
  >
    <button
      className="btn black "
      onClick={[Function]}
    >
      <span
        className="icon"
      >
        <span
          className="regular"
        >
          <span
            className=""
          >
            <i
              data-eva="star-outline"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </span>
        <span
          className="hovered"
        >
          <span
            className=""
          >
            <i
              data-eva="star"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </span>
      </span>
    </button>
    <button
      className="btn black "
      onClick={[Function]}
    >
      <span
        className="icon"
      >
        <span
          className="regular"
        >
          <span
            className="mr-10"
          >
            <i
              data-eva="file-add-outline"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </span>
        <span
          className="hovered"
        >
          <span
            className="mr-10"
          >
            <i
              data-eva="file-add"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </span>
      </span>
      Toolbar.Mes fiches
    </button>
    <button
      className="btn black "
      onClick={[Function]}
    >
      <span
        className="icon icon_traduction"
      >
        <span
          className="regular"
        />
        <span
          className="hovered"
        />
      </span>
      Toolbar.Mes traductions
    </button>
    <button
      className="btn black "
      onClick={[Function]}
    >
      <span
        className="icon"
      >
        <span
          className="regular"
        >
          <span
            className=""
          >
            <i
              data-eva="person-outline"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </span>
        <span
          className="hovered"
        >
          <span
            className=""
          >
            <i
              data-eva="person"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </span>
      </span>
    </button>
    <button
      className="btn red "
      onClick={[Function]}
    >
      <span
        className="icon"
      >
        <span
          className="regular"
        >
          <span
            className="mr-10"
          >
            <i
              data-eva="log-out-outline"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </span>
        <span
          className="hovered"
        >
          <span
            className="mr-10"
          >
            <i
              data-eva="log-out"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </span>
      </span>
      Toolbar.Déconnexion
    </button>
  </div>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        Aucune notification ! 
      </div>
      <div
        style={
          Object {
            "marginBottom": "20px",
            "marginTop": "32px",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`UserNotifications should render correctly when loading 1`] = `
.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-bottom: 32px;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c4 {
  background: #212121;
  border-radius: 12px;
  font-weight: bold;
  font-size: 28px;
  line-height: 35px;
  color: #ffffff;
  padding: 8px 19px 8px 19px;
  margin: 0px 8px 0px 8px;
}

.c3 {
  font-weight: bold;
  font-size: 28px;
  line-height: 35px;
  margin-bottom: 8px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c1 {
  background: #edebeb;
  border-radius: 12px;
  padding: 40px;
  margin-top: 26px;
  margin-right: 120px;
  margin-left: 120px;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
}

<div
  style={
    Object {
      "display": "flex",
      "flex": 1,
      "flexDirection": "column",
    }
  }
>
  <div
    className="c0"
  >
    <button
      className="btn black "
      onClick={[Function]}
    >
      <span
        className="icon"
      >
        <span
          className="regular"
        >
          <span
            className=""
          >
            <i
              data-eva="star-outline"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </span>
        <span
          className="hovered"
        >
          <span
            className=""
          >
            <i
              data-eva="star"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </span>
      </span>
    </button>
    <button
      className="btn black "
      onClick={[Function]}
    >
      <span
        className="icon"
      >
        <span
          className="regular"
        >
          <span
            className="mr-10"
          >
            <i
              data-eva="file-add-outline"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </span>
        <span
          className="hovered"
        >
          <span
            className="mr-10"
          >
            <i
              data-eva="file-add"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </span>
      </span>
      Toolbar.Mes fiches
    </button>
    <button
      className="btn black "
      onClick={[Function]}
    >
      <span
        className="icon icon_traduction"
      >
        <span
          className="regular"
        />
        <span
          className="hovered"
        />
      </span>
      Toolbar.Mes traductions
    </button>
    <button
      className="btn black "
      onClick={[Function]}
    >
      <span
        className="icon"
      >
        <span
          className="regular"
        >
          <span
            className=""
          >
            <i
              data-eva="person-outline"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </span>
        <span
          className="hovered"
        >
          <span
            className=""
          >
            <i
              data-eva="person"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </span>
      </span>
    </button>
    <button
      className="btn red "
      onClick={[Function]}
    >
      <span
        className="icon"
      >
        <span
          className="regular"
        >
          <span
            className="mr-10"
          >
            <i
              data-eva="log-out-outline"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </span>
        <span
          className="hovered"
        >
          <span
            className="mr-10"
          >
            <i
              data-eva="log-out"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </span>
      </span>
      Toolbar.Déconnexion
    </button>
  </div>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        Vous avez
      </div>
      <div
        className="c4"
      >
        ...
      </div>
      <div
        className="c3"
      >
        nouvelle notification.
      </div>
    </div>
    <span>
      <span
        className="react-loading-skeleton css-1vmnjpn-skeletonStyles-Skeleton"
        style={
          Object {
            "height": 50,
          }
        }
      >
        ‌
      </span>
      <span
        className="react-loading-skeleton css-1vmnjpn-skeletonStyles-Skeleton"
        style={
          Object {
            "height": 50,
          }
        }
      >
        ‌
      </span>
      <span
        className="react-loading-skeleton css-1vmnjpn-skeletonStyles-Skeleton"
        style={
          Object {
            "height": 50,
          }
        }
      >
        ‌
      </span>
    </span>
  </div>
</div>
`;

exports[`UserNotifications should render correctly when notif not read annuaire, not read reaction, not read new content, read reaction  1`] = `
.c5 {
  background: #2d9cdb;
  border-radius: 12px;
  padding: 8px 8px 8px 20px;
  margin: 8px 0px 0px 0px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  cursor: pointer;
  border-width: 2px;
  border-style: solid;
  border-color: #2d9cdb;
}

.c5:hover {
  border-color: #212121;
}

.c10 {
  background: #ffffff;
  border-radius: 12px;
  padding: 8px 8px 8px 20px;
  margin: 8px 0px 0px 0px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  cursor: pointer;
  border-width: 2px;
  border-style: solid;
  border-color: #ffffff;
}

.c10:hover {
  border-color: #212121;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c7 {
  font-weight: bold;
  font-size: 18px;
  line-height: 23px;
  color: #ffffff;
  margin-left: 20px;
}

.c11 {
  font-weight: bold;
  font-size: 18px;
  line-height: 23px;
  color: #212121;
  margin-left: 20px;
}

.c9 {
  background: #edebeb;
  border-radius: 8px;
  padding: 8px;
  font-weight: bold;
  font-size: 18px;
  line-height: 23px;
  margin-left: 8px;
}

.c8 {
  font-weight: bold;
  font-size: 16px;
  line-height: 20px;
  color: #ffffff;
  margin-right: 8px;
  margin-left: 8px;
}

.c12 {
  font-weight: bold;
  font-size: 16px;
  line-height: 20px;
  color: #f44336;
  margin-right: 8px;
  margin-left: 8px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-bottom: 32px;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c4 {
  background: #212121;
  border-radius: 12px;
  font-weight: bold;
  font-size: 28px;
  line-height: 35px;
  color: #ffffff;
  padding: 8px 19px 8px 19px;
  margin: 0px 8px 0px 8px;
}

.c3 {
  font-weight: bold;
  font-size: 28px;
  line-height: 35px;
  margin-bottom: 8px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c1 {
  background: #edebeb;
  border-radius: 12px;
  padding: 40px;
  margin-top: 26px;
  margin-right: 120px;
  margin-left: 120px;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
}

<div
  style={
    Object {
      "display": "flex",
      "flex": 1,
      "flexDirection": "column",
    }
  }
>
  <div
    className="c0"
  >
    <button
      className="btn black "
      onClick={[Function]}
    >
      <span
        className="icon"
      >
        <span
          className="regular"
        >
          <span
            className=""
          >
            <i
              data-eva="star-outline"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </span>
        <span
          className="hovered"
        >
          <span
            className=""
          >
            <i
              data-eva="star"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </span>
      </span>
    </button>
    <button
      className="btn black "
      onClick={[Function]}
    >
      <span
        className="icon"
      >
        <span
          className="regular"
        >
          <span
            className="mr-10"
          >
            <i
              data-eva="file-add-outline"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </span>
        <span
          className="hovered"
        >
          <span
            className="mr-10"
          >
            <i
              data-eva="file-add"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </span>
      </span>
      Toolbar.Mes fiches
    </button>
    <button
      className="btn black "
      onClick={[Function]}
    >
      <span
        className="icon icon_traduction"
      >
        <span
          className="regular"
        />
        <span
          className="hovered"
        />
      </span>
      Toolbar.Mes traductions
    </button>
    <button
      className="btn black "
      onClick={[Function]}
    >
      <span
        className="icon"
      >
        <span
          className="regular"
        >
          <span
            className=""
          >
            <i
              data-eva="person-outline"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </span>
        <span
          className="hovered"
        >
          <span
            className=""
          >
            <i
              data-eva="person"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </span>
      </span>
    </button>
    <button
      className="btn red "
      onClick={[Function]}
    >
      <span
        className="icon"
      >
        <span
          className="regular"
        >
          <span
            className="mr-10"
          >
            <i
              data-eva="log-out-outline"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </span>
        <span
          className="hovered"
        >
          <span
            className="mr-10"
          >
            <i
              data-eva="log-out"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </span>
      </span>
      Toolbar.Déconnexion
    </button>
  </div>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        Vous avez
      </div>
      <div
        className="c4"
      >
        3
      </div>
      <div
        className="c3"
      >
        nouvelles notifications.
      </div>
    </div>
    <div
      className="c5"
      onClick={[Function]}
    >
      <div
        className="c6"
      >
        <span>
          <i
            data-eva="bell"
            data-eva-fill="#ffffff"
            data-eva-height="20px"
            data-eva-width="20px"
          />
        </span>
        <div
          className="c7"
        >
          Recensez votre structure dans l'annuaire de l'intégration
        </div>
      </div>
      <div
        className="c6"
      >
        <button
          className="btn  dark mr-8 "
        >
          <span
            className="mr-10"
          >
            <i
              data-eva="folder-add-outline"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
          Compléter la fiche annuaire
        </button>
        <button
          className="btn  error ml-8 "
          onClick={[Function]}
          testID="test-delete-annuaire"
        >
          <span
            className=""
          >
            <i
              data-eva="trash-2"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </button>
      </div>
    </div>
    <div
      className="c5"
      onClick={[Function]}
    >
      <div
        className="c6"
      >
        <span>
          <i
            data-eva="bell"
            data-eva-fill="#ffffff"
            data-eva-height="20px"
            data-eva-width="20px"
          />
        </span>
        <div
          className="c7"
        >
          Une nouvelle fiche a été attribuée à votre structure
        </div>
      </div>
      <div
        className="c6"
      >
        <div
          className="c8"
        >
          Depuis 5 jours
        </div>
        <button
          className="btn  dark  "
        >
          <span
            className="mr-10"
          >
            <i
              data-eva="eye"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
          Voir la fiche
        </button>
      </div>
    </div>
    <div
      className="c5"
      onClick={[Function]}
    >
      <div
        className="c6"
      >
        <span>
          <i
            data-eva="bell"
            data-eva-fill="#ffffff"
            data-eva-height="20px"
            data-eva-width="20px"
          />
        </span>
        <div
          className="c7"
        >
          Nouvelle réaction sur la fiche :
        </div>
        <div
          className="c9"
        >
          titre info
        </div>
      </div>
      <div
        className="c6"
      >
        <div
          className="c8"
        >
          Depuis 5 jours
        </div>
        <button
          className="btn  dark  "
        >
          <span
            className="mr-10"
          >
            <i
              data-eva="eye"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
          Voir la réaction
        </button>
        <button
          className="btn  error ml-8 "
          onClick={[Function]}
          testID="test-delete-reaction"
        >
          <span
            className=""
          >
            <i
              data-eva="trash-2"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </button>
      </div>
    </div>
    <div
      className="c10"
      onClick={[Function]}
    >
      <div
        className="c6"
      >
        <span>
          <i
            data-eva="bell-outline"
            data-eva-fill="#212121"
            data-eva-height="20px"
            data-eva-width="20px"
          />
        </span>
        <div
          className="c11"
        >
          Nouvelle réaction sur la fiche :
        </div>
        <div
          className="c9"
        >
          titre info2
        </div>
      </div>
      <div
        className="c6"
      >
        <div
          className="c12"
        >
          Depuis 5 jours
        </div>
        <button
          className="btn  dark  "
        >
          <span
            className="mr-10"
          >
            <i
              data-eva="eye"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
          Voir la réaction
        </button>
        <button
          className="btn  error ml-8 "
          onClick={[Function]}
          testID="test-delete-reaction"
        >
          <span
            className=""
          >
            <i
              data-eva="trash-2"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;
